[package]
name = "y2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.10.5"
regex = "1"
lazy_static = "1.4.0"
num = "0.4.0"
pathfinding = "3.0.14"
serde_json = "1.0"
permutator = "0.4.3"
memoize = "0.3.1"
